pbr: - UI pass and no UI layers support - text pixel perfect rendering development
pbr::mario:
- UI asset has been improved

--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
@@ -15,10 +15,10 @@
                 </div>
             </div>
             <div class="middle-column main-font">
-                <div class="cell">
+                <div class="coin-top-line">
                 </div>
-                <div class="coin-cell">
-                    <div class="coin-line">
+                <div class="coin-bottom-line">
+                    <div class="coin-image">
                         <img class="coin" src="img/coin.png">
                     </div>
                     <div id="lives" class="cell main-font">
