tools: - html-validator has been updated to 1.0.1.5
pbr:
- UI vertical alignment support

--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
@@ -15,8 +15,6 @@
                 </div>
             </div>
             <div class="middle-column main-font">
-                <div class="coin-top-line">
-                </div>
                 <div class="coin-bottom-line">
                     <div class="coin-image">
                         <img class="coin" src="img/coin.png">
@@ -26,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div class="middle-column main-font">
+            <div class="middle-column-2 middle-column main-font">
                 <div class="cell">
                     WORLD
                 </div>
