pbr: - UI caching

--- a/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
+++ b/app/src/main/assets/pbr/assets/Props/experimental/world-1-1/ui/index.html
@@ -24,7 +24,7 @@
                     </div>
                 </div>
             </div>
-            <div class="middle-column-2 middle-column main-font">
+            <div class="middle-column main-font">
                 <div class="cell">
                     WORLD
                 </div>
@@ -36,8 +36,8 @@
                 <div class="cell">
                     TIME
                 </div>
-                <div class="cell">
-                    383
+                <div id="timer" class="cell">
+                    380
                 </div>
             </div>
         </div>
